# image_converter

./: .gitignore  README.MD  conftest.py  pyproject.toml  requirements.txt
image_converter/: __init__.py  converter.py
image_converter.egg-info/: PKG-INFO  SOURCES.txt
tests/: test_converter.py
